...
                            <constraint firstItem="ddn-Ko-NA5" firstAttribute="top" secondItem="MVJ-7t-2TR" secondAttribute="top" id="lpS-dq-W3S"/>
                            <constraint firstItem="shS-2u-b1t" firstAttribute="centerX" secondItem="ddn-Ko-NA5" secondAttribute="centerX" id="sjh-em-pNY"/>
                            <constraint firstItem="shS-2u-b1t" firstAttribute="top" secondItem="MVJ-7t-2TR" secondAttribute="top" constant="301" id="ywa-a1-CpQ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="MVJ-7t-2TR"/>
                    </view>
                    <navigationItem key="navigationItem" title="My Games" id="tpZ-Nk-P3Y"/>
                    <connections>
                        <outlet property="loading" destination="shS-2u-b1t" id="lbO-MV-wBs"/>
                        <outlet property="tableView" destination="ddn-Ko-NA5" id="eDh-Zk-vnv"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="PXg-pT-xGe" sceneMemberID="firstResponder"/>
...
                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pSK-ag-wPm">
                                <rect key="frame" x="329" y="295" width="26" height="22"/>
                                <state key="normal" title="Button" image="star" catalog="system"/>
                                <connections>
                                    <action selector="btnFav:" destination="Gfh-6U-NDH" eventType="touchUpInside" id="YBv-xy-Fvq"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
...
                                <exclude reference="r7H-Ef-674"/>
                                <exclude reference="aPr-dh-JxY"/>
                                <exclude reference="fZN-oe-38D"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Detail Game" id="xhT-en-wvI"/>
                    <connections>
                        <outlet property="chart" destination="4fj-vw-rDr" id="TQe-zX-rf8"/>
                        <outlet property="descView" destination="UQ4-YD-Aph" id="Kvv-Sy-WXO"/>
                        <outlet property="favorite" destination="pSK-ag-wPm" id="uyN-yk-cbb"/>
                        <outlet property="image" destination="KfI-iE-SLH" id="q8L-MP-csM"/>
                        <outlet property="playtime" destination="vYO-4H-SyX" id="66P-TK-YNF"/>
...
            <point key="canvasLocation" x="137.68115942028987" y="109.82142857142857"/>
        </scene>
        <!--My Profile-->
        <scene sceneID="Wrq-D2-WRD">
            <objects>
                <navigationController id="51c-ai-AAN" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Profile" image="person.crop.circle" catalog="system" id="o4E-wv-xhj"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IIO-Ni-zMH">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="af0-lL-cE3" kind="relationship" relationship="rootViewController" id="oZL-UM-l9A"/>
...
                            <constraint firstItem="PTf-0D-8Mi" firstAttribute="top" secondItem="oLT-Hb-6G1" secondAttribute="top" id="iOE-m6-Hi7"/>
                            <constraint firstItem="b7c-zL-dJp" firstAttribute="top" secondItem="oLT-Hb-6G1" secondAttribute="top" constant="238" id="iiA-Tw-ejt"/>
                            <constraint firstItem="oLT-Hb-6G1" firstAttribute="bottom" secondItem="b7c-zL-dJp" secondAttribute="bottom" constant="158" id="jLq-H1-w1r"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="oLT-Hb-6G1"/>
                    </view>
                    <navigationItem key="navigationItem" title="My Favorites" id="1LZ-EZ-NKe"/>
                    <connections>
                        <outlet property="placeholder" destination="b7c-zL-dJp" id="bBu-h7-hge"/>
                        <outlet property="tableView" destination="PTf-0D-8Mi" id="5Qy-eB-Hkl"/>
                        <segue destination="Gfh-6U-NDH" kind="show" identifier="showDetail" id="oGp-yI-r6F"/>
                    </connections>
                </viewController>
...
                                <rect key="frame" x="126" y="296" width="115" height="30"/>
                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="tZ4-ZN-lKI"/>
                                    <constraint firstAttribute="width" constant="154" id="yB7-dF-yYV"/>
                                </constraints>
                                <state key="normal" title="Get Image">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="btnGetImagePressed:" destination="kRB-IN-hG2" eventType="touchUpInside" id="Nij-rl-6EK"/>
                                </connections>
                            </button>
...
