...
@objc func viewTapped(sender: UITapGestureRecognizer) {
        view.endEditing(true)
    }
    
    func alert(_ field: String ){
        let alertController = UIAlertController(title: "Warning", message: "\(field) cannot be empty", preferredStyle: .alert)
        let alertAction = UIAlertAction(title: "OK", style: .default, handler: nil)
        alertController.addAction(alertAction)
        self.present(alertController, animated: true, completion: nil)
    }
    
    @IBAction func btnGetImagePressed(_ sender: Any) {
        self.present(imagePicker, animated: true, completion: nil)
...
